# speaker-recognize

./: .gitignore  README.md
backend/: a  env.example  hotwords.txt  main.py  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py  schemas.py  services.py  utils.py
backend/app/api/: audio.py  transcribe.py  websocket.py
backend/app/core/: config.py
backend/app/routes/: __init__.py  openai_transcription.py  speech.py  transcribe.py  websocket.py
backend/app/services/: asr_service.py  tts_service.py
backend2/: env.example  pyproject.toml
backend2/app/: main.py
backend2/app/api/: audio.py  transcribe.py  websocket.py
backend2/app/core/: auth.py  config.py
backend2/app/services/: asr_service.py  diarization_service.py  speaker_verify_service.py  tts_service.py
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: MicButton.vue  ResultItem.vue  ResultList.vue  ResultSummary.vue
frontend/src/utils/: audio.js  websocket.js
realtime/: .env.production  index.html  package.json  pnpm-lock.yaml  vite.config.js
realtime/src/: App.vue  main.js
realtime/src/assets/styles/: main.css  variables.css
realtime/src/components/: PageHeader.vue  RecordingButton.vue  SpeakerTag.vue  TranscriptionCard.vue  TranscriptionList.vue  WaveVisualizer.vue
realtime/src/composables/: useAudioRecorder.js
realtime/src/types/: index.ts
