[project]
name = "speaker-recognize-api"
version = "0.1.0"
description = "Speaker Recognition API with OpenAI-compatible endpoints"
requires-python = ">=3.10,<=3.10"
dependencies = [
    # Web框架
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.30.0",
    "fastapi-cli>=0.0.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.1.0",

    # 音频处理
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchcodec==0.7.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "pyworld>=0.3.4",

    # ASR相关
    "funasr>=1.3.1",
    "qwen-asr>=0.0.1",
    "setuptools==81.0.0",
    "openai-whisper>=20231117",

    # TTS相关
    "edge-tts>=6.1.12",

    # 声纹识别
    "pyannote.audio>=4.0.4",

    # Cosyvoice依赖
    "conformer>=0.3.2",
    "diffusers>=0.29.0",
    "gdown>=5.1.0",
    "gradio>=5.4.0",
    "grpcio>=1.57.0",
    "grpcio-tools>=1.57.0",
    "hydra-core>=1.3.2",
    "HyperPyYAML>=1.2.3",
    "inflect>=7.3.1",
    "lightning>=2.4",
    "matplotlib>=3.10.0",
    "modelscope>=1.20.0",
    "networkx>=3.1",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "onnx>=1.16.0",
    "protobuf>=4.25",
    "pyarrow>=18.1.0",
    "rich>=13.9.4",
    "tensorboard>=2.14.0",
    "transformers>=4.57.6",
    "x-transformers>=2.11.24",
    "wetext>=0.0.4",
    "wget>=3.2",
    "onnxruntime-gpu>=1.18.0",

    # 其他
    "deepspeed>=0.15.1; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
