[project]
name = "speaker-recognize-api"
version = "0.1.0"
description = "Speaker Recognition API with OpenAI-compatible endpoints"
requires-python = ">=3.10,<=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "funasr>=1.0.0,<2.0.0",
    "qwen-asr>=0.0.1",
    "torchaudio>=2.0.0",
    "torch>=2.0.0",
    "openai-whisper>=20250625",
    "edge-tts>=6.1.12",
    "soundfile>=0.12.0",
    "pyannote.audio>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
